# cpp-hw-1

./: CMakeLists.txt  README.md
.github/workflows/: pull_request.yml
project/cmd/src/: main.c
project/menu/include/: menu.h
project/menu/src/: menu.c
project/task/include/: task.h
project/task/src/: task.c
test/: main.cpp
